# CProgram

./: .gitignore  CMakeLists.txt  README.md  app.cpp  app.hpp  app_admin.cpp  app_core.cpp  app_display.cpp  app_internal.hpp  app_menus.cpp  app_persistence.cpp  app_waiter.cpp  build.bat  build_portable.bat  build_qt.bat  dishes.txt  linked_list_demo.cpp  main.cpp  order_items.txt  orders.txt  package_portable.bat  qt_main.cpp  restaurant_backend.cpp  restaurant_backend.hpp  run_qt.bat  tables.txt  ui.cpp  ui.hpp  中小饭店点餐系统_伪图形界面第一版方案.md  项目学习说明.md  高级语言课程设计期末大作业要求.docx
data/: dishes.txt  style.qss  tables.txt  users.txt
release_portable/: 使用说明.txt
src/: qt_main.cpp  restaurant_backend.cpp  restaurant_backend.hpp
